--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "json-server": "^0.16.3",
     "jsonwebtoken": "^8.5.1",
+    "netlify-cli": "^8.0.20",
     "object-assign": "4.1.1",
     "promise": "7.1.1",
     "react": "^16.10.2",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "node server/bin/www",
